more changes to config

--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@
 
 #######################################################################################
 # Jekyll site settings
-title: YOUR BOOK NAME
-author: YOUR AUTHOR NAME
-email: YOUR EMAIL
+title: Introduction to Data Science
+author: Steffen Herbold
+email: herbold
 description: >-
-  This is an example book built with Jupyter Books.
+  Textbook for my Lectures, but also maybe interesting for anyone who wants to learn about data science. 
 
 baseurl: /  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
-url: YOUR URL                  # the base hostname & protocol for your site, e.g. http://example.com
+url: https://sherbold.github.io/intro-to-data-science # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #######################################################################################
