--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -22,7 +22,7 @@
 # See the links below for an example.
 
 # Top-level page
-- title: Home
+- title: Preface
   url: /00_Preface
   not_numbered: true
 
@@ -34,19 +34,6 @@
 - divider: true
 
 - header: Chapters
-
-# A chapter w/ a collection of sections beneath it
-- title: Features and customization
-  url: /features/features
-  not_numbered: true
-  expand_sections: true
-  sections:
-  - title: Markdown files
-    url: /features/markdown
-    not_numbered: true
-  - title: Jupyter notebooks
-    url: /features/notebooks
-    not_numbered: true
 
 - title: Big Data and Data Science
   url: /01_Introduction
