added current version of chapter 3

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # Jekyll site settings
 title: Introduction to Data Science
 author: Steffen Herbold
-email: herbold
+email: herbold@cs.uni-goettingen.de
 description: >-
   Textbook for my Lectures, but also maybe interesting for anyone who wants to learn about data science. 
 
