testing of the style

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -27,8 +27,8 @@
   not_numbered: true
 
 # Adds a searchbar link
-- title: Search
-  search: true
+#- title: Search
+#  search: true
 
 # Divider for meta-pages and content page
 - divider: true
