--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -38,11 +38,14 @@
 - title: Big Data and Data Science
   url: /01_Introduction
   not_numbered: false
+  expand_sections: true
 
 - title: The Process of Data Science Projects
   url: /02_Process
   not_numbered: false
+  expand_sections: true
   
 - title: Data Exploration
   url: /03_Data-Exploration
   not_numbered: false
+  expand_sections: true
