start of chapter 7

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -52,6 +52,9 @@
 - url: /06_Clustering
   not_numbered: false
   
+- url: /07_Classification
+  not_numbered: false
+  
 - divider: true
 
 - url: /Appendix
