added clustering solution to toc and build

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -73,6 +73,7 @@
   - url: /exercises/Solution_CSV_and_DataFrames
   - url: /exercises/Solution_Data_Exploration
   - url: /exercises/Solution_Association_Rule_Mining
+  - url: /exercises/Solution_Clustering
 
 - url: /Appendix
   not_numbered: true
