--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -75,6 +75,7 @@
   - url: /exercises/Solution_Data_Exploration
   - url: /exercises/Solution_Association_Rule_Mining
   - url: /exercises/Solution_Clustering
+  - url: /exercises/Solution_Classification
 
 - url: /Appendix
   not_numbered: true
