--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -70,6 +70,7 @@
     - url: /exercises/Exercise_Association_Rule_Mining
     - url: /exercises/Exercise_Clustering
     - url: /exercises/Exercise_Classification
+    - url: /exercises/Exercise_Regression
 - url: /Solutions
   not_numbered: true
   expand_sections: false
