--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -80,6 +80,7 @@
   - url: /exercises/Solution_Association_Rule_Mining
   - url: /exercises/Solution_Clustering
   - url: /exercises/Solution_Classification
+  - url: /exercises/Solution_Regression
 
 - url: /Appendix
   not_numbered: true
