start of text mining chapter

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -61,6 +61,9 @@
 - url: /09_Time-Series-Analysis
   not_numbered: false
   
+- url: /10_Text-Mining
+  not_numbered: false
+  
 - divider: true
 
 - url: /Exercises
