--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -78,6 +78,7 @@
     - url: /exercises/Exercise_Classification
     - url: /exercises/Exercise_Regression
     - url: /exercises/Exercise_Time_Series_Analysis
+    - url: /exercises/Exercise_Text_Mining
 - url: /Solutions
   not_numbered: true
   expand_sections: false
