solution for text mining exercise

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -90,6 +90,4 @@
   - url: /exercises/Solution_Classification
   - url: /exercises/Solution_Regression
   - url: /exercises/Solution_Time_Series_Analysis
-
-- url: /Appendix
-  not_numbered: true
+  - url: /exercises/Solution_Text_Mining
