solution for statistics exercise

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -95,3 +95,4 @@
   - url: /exercises/Solution_Regression
   - url: /exercises/Solution_Time_Series_Analysis
   - url: /exercises/Solution_Text_Mining
+  - url: /exercises/Solution_Statistics
