--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,74 @@
-# Requirements for the demo notebooks
-# Useful for MyBinder configuration
-pandas
-numpy
-datascience
-folium
-matplotlib
-nbinteract
-scipy
-jupyter-book
+alabaster==0.7.12
+attrs==19.3.0
+Babel==2.8.0
+backcall==0.2.0
+bleach==3.1.5
+certifi==2020.4.5.2
+chardet==3.0.4
+click==7.1.2
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.16
+entrypoints==0.3
+idna==2.9
+imagesize==1.2.0
+importlib-metadata==1.6.1
+ipython==7.15.0
+ipython-genutils==0.2.0
+jedi==0.17.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonschema==3.2.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.2
+mistune==0.8.4
+mlxtend==0.17.2
+nbconvert==5.6.1
+nbformat==5.0.7
+nbsphinx==0.7.0
+nltk==3.5
+numpy==1.19.0
+packaging==20.4
+pandas==1.0.5
+pandoc==1.0.2
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.2
+pkg-resources==0.0.0
+ply==3.11
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+regex==2020.6.8
+requests==2.23.0
+scikit-learn==0.23.1
+scipy==1.5.0
+seaborn==0.10.1
+six==1.15.0
+snowballstemmer==2.0.0
+Sphinx==3.1.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-svg2pdfconverter==1.0.1
+testpath==0.4.4
+threadpoolctl==2.1.0
+tqdm==4.46.1
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.2.4
+webencodings==0.5.1
+wordcloud==1.7.0
+zipp==3.1.0
