--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jedi==0.17.0
 Jinja2==2.11.2
 joblib==0.15.1
 jsonschema==3.2.0
+jupyter-book==0.6.4
 jupyter-core==4.6.3
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
