--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -99,3 +99,8 @@
   - url: /exercises/Solution_Time_Series_Analysis
   - url: /exercises/Solution_Text_Mining
   - url: /exercises/Solution_Statistics
+  
+- divider: true
+
+- url: /Appendix
+  not_numbered: true
